MPS-40132 Transform gutter marks location and size during paint